; ModuleID = '/home/carl/AnghaBench/vlc/test/src/player/extr_player.c_player_on_program_selection_changed.c'
source_filename = "/home/carl/AnghaBench/vlc/test/src/player/extr_player.c_player_on_program_selection_changed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ctx = type { i32 }
%struct.report_program_selection = type { i32, i32 }

@on_program_selection_changed = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i8*)* @player_on_program_selection_changed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @player_on_program_selection_changed(i32* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.ctx*, align 8
  %10 = alloca %struct.report_program_selection, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = call %struct.ctx* @get_ctx(i32* %11, i8* %12)
  store %struct.ctx* %13, %struct.ctx** %9, align 8
  %14 = getelementptr inbounds %struct.report_program_selection, %struct.report_program_selection* %10, i32 0, i32 0
  %15 = load i32, i32* %6, align 4
  store i32 %15, i32* %14, align 4
  %16 = getelementptr inbounds %struct.report_program_selection, %struct.report_program_selection* %10, i32 0, i32 1
  %17 = load i32, i32* %7, align 4
  store i32 %17, i32* %16, align 4
  %18 = load i32, i32* @on_program_selection_changed, align 4
  %19 = bitcast %struct.report_program_selection* %10 to i64*
  %20 = load i64, i64* %19, align 4
  %21 = call i32 @VEC_PUSH(i32 %18, i64 %20)
  ret void
}

declare dso_local %struct.ctx* @get_ctx(i32*, i8*) #1

declare dso_local i32 @VEC_PUSH(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
